# ratherapia

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: ratty.toml
scripts/: run-ratty-synth.sh
src/: app.rs  audio.rs  engine.rs  main.rs  ratty.rs  ui.rs  video.rs
