[package]
name = "ratherapia"
version = "0.1.1"
edition = "2021"
authors = ["ozzy ocak <ozzyocak@gmail.com>"]
description = "A calming Rust/Ratatui ambient synth with rain, sound textures, and Ratty inline 3D."
repository = "https://github.com/ozzyocak/ratherapia"
license = "MIT"
readme = "README.md"
keywords = ["ratatui", "terminal", "synth", "audio", "ratty"]

[dependencies]
anyhow = "1"
bevy_ecs = "0.14"
cpal = "0.15"
crossterm = "0.28"
rand = "0.8"
ratatui = "0.29"
